# learn-github-actions

./: pyproject.toml
.github/workflows/: learn-github-actions.yml
learn_github_actions/: __init__.py  __main__.py
